lib/bindings/quiche_bindings.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
import 'dart:ffi' as ffi;

class NativeLibrary {
  /// Holds the Dynamic library.
  final ffi.DynamicLibrary _dylib;

  /// The symbols are looked up in [dynamicLibrary].
  NativeLibrary(ffi.DynamicLibrary dynamicLibrary) : _dylib = dynamicLibrary;

  int __bswap_16(
    int __bsx,
  ) {
    ___bswap_16 ??=
        _dylib.lookupFunction<_c___bswap_16, _dart___bswap_16>('__bswap_16');
    return ___bswap_16(
      __bsx,
    );
  }

  _dart___bswap_16 ___bswap_16;

  int __bswap_32(
    int __bsx,
  ) {
    ___bswap_32 ??=
        _dylib.lookupFunction<_c___bswap_32, _dart___bswap_32>('__bswap_32');
    return ___bswap_32(
      __bsx,
    );
  }

  _dart___bswap_32 ___bswap_32;

  int __bswap_64(
    int __bsx,
  ) {
    ___bswap_64 ??=
        _dylib.lookupFunction<_c___bswap_64, _dart___bswap_64>('__bswap_64');
    return ___bswap_64(
      __bsx,
    );
  }

  _dart___bswap_64 ___bswap_64;

  int __uint16_identity(
    int __x,
  ) {
    ___uint16_identity ??=
        _dylib.lookupFunction<_c___uint16_identity, _dart___uint16_identity>(
            '__uint16_identity');
    return ___uint16_identity(
      __x,
    );
  }

  _dart___uint16_identity ___uint16_identity;

  int __uint32_identity(
    int __x,
  ) {
    ___uint32_identity ??=
        _dylib.lookupFunction<_c___uint32_identity, _dart___uint32_identity>(
            '__uint32_identity');
    return ___uint32_identity(
      __x,
    );
  }

  _dart___uint32_identity ___uint32_identity;

  int __uint64_identity(
    int __x,
  ) {
    ___uint64_identity ??=
        _dylib.lookupFunction<_c___uint64_identity, _dart___uint64_identity>(
            '__uint64_identity');
    return ___uint64_identity(
      __x,
    );
  }

  _dart___uint64_identity ___uint64_identity;

  int select(
    int __nfds,
    ffi.Pointer<fd_set> __readfds,
    ffi.Pointer<fd_set> __writefds,
    ffi.Pointer<fd_set> __exceptfds,
    ffi.Pointer<timeval> __timeout,
  ) {
    _select ??= _dylib.lookupFunction<_c_select, _dart_select>('select');
    return _select(
      __nfds,
      __readfds,
      __writefds,
      __exceptfds,
      __timeout,
    );
  }

  _dart_select _select;

  int pselect(
    int __nfds,
    ffi.Pointer<fd_set> __readfds,
    ffi.Pointer<fd_set> __writefds,
    ffi.Pointer<fd_set> __exceptfds,
    ffi.Pointer<timespec> __timeout,
    ffi.Pointer<__sigset_t> __sigmask,
  ) {
    _pselect ??= _dylib.lookupFunction<_c_pselect, _dart_pselect>('pselect');
    return _pselect(
      __nfds,
      __readfds,
      __writefds,
      __exceptfds,
      __timeout,
      __sigmask,
    );
  }

  _dart_pselect _pselect;

  ffi.Pointer<ffi.Int8> quiche_version() {
    _quiche_version ??=
        _dylib.lookupFunction<_c_quiche_version, _dart_quiche_version>(
            'quiche_version');
    return _quiche_version();
  }

  _dart_quiche_version _quiche_version;

  int quiche_enable_debug_logging(
    ffi.Pointer<ffi.NativeFunction<_typedefC_1>> cb,
    ffi.Pointer<ffi.Void> argp,
  ) {
    _quiche_enable_debug_logging ??= _dylib.lookupFunction<
        _c_quiche_enable_debug_logging,
        _dart_quiche_enable_debug_logging>('quiche_enable_debug_logging');
    return _quiche_enable_debug_logging(
      cb,
      argp,
    );
  }

  _dart_quiche_enable_debug_logging _quiche_enable_debug_logging;

  ffi.Pointer<Config> quiche_config_new(
    int version,
  ) {
    _quiche_config_new ??=
        _dylib.lookupFunction<_c_quiche_config_new, _dart_quiche_config_new>(
            'quiche_config_new');
    return _quiche_config_new(
      version,
    );
  }

  _dart_quiche_config_new _quiche_config_new;

  int quiche_config_load_cert_chain_from_pem_file(
    ffi.Pointer<Config> config,
    ffi.Pointer<ffi.Int8> path,
  ) {
    _quiche_config_load_cert_chain_from_pem_file ??= _dylib.lookupFunction<
            _c_quiche_config_load_cert_chain_from_pem_file,
            _dart_quiche_config_load_cert_chain_from_pem_file>(
        'quiche_config_load_cert_chain_from_pem_file');
    return _quiche_config_load_cert_chain_from_pem_file(
      config,
      path,
    );
  }

  _dart_quiche_config_load_cert_chain_from_pem_file
      _quiche_config_load_cert_chain_from_pem_file;

  int quiche_config_load_priv_key_from_pem_file(
    ffi.Pointer<Config> config,
    ffi.Pointer<ffi.Int8> path,
  ) {
    _quiche_config_load_priv_key_from_pem_file ??= _dylib.lookupFunction<
            _c_quiche_config_load_priv_key_from_pem_file,
            _dart_quiche_config_load_priv_key_from_pem_file>(
        'quiche_config_load_priv_key_from_pem_file');
    return _quiche_config_load_priv_key_from_pem_file(
      config,
      path,
    );
  }

  _dart_quiche_config_load_priv_key_from_pem_file
      _quiche_config_load_priv_key_from_pem_file;

  void quiche_config_verify_peer(
    ffi.Pointer<Config> config,
    bool v,
  ) {
    _quiche_config_verify_peer ??= _dylib.lookupFunction<
        _c_quiche_config_verify_peer,
        _dart_quiche_config_verify_peer>('quiche_config_verify_peer');
    return _quiche_config_verify_peer(
      config,
      v ? 1 : 0,
    );
  }

  _dart_quiche_config_verify_peer _quiche_config_verify_peer;

  void quiche_config_grease(
    ffi.Pointer<Config> config,
    bool v,
  ) {
    _quiche_config_grease ??= _dylib.lookupFunction<_c_quiche_config_grease,
        _dart_quiche_config_grease>('quiche_config_grease');
    return _quiche_config_grease(
      config,
      v ? 1 : 0,
    );
  }

  _dart_quiche_config_grease _quiche_config_grease;

  void quiche_config_log_keys(
    ffi.Pointer<Config> config,
  ) {
    _quiche_config_log_keys ??= _dylib.lookupFunction<_c_quiche_config_log_keys,
        _dart_quiche_config_log_keys>('quiche_config_log_keys');
    return _quiche_config_log_keys(
      config,
    );
  }

  _dart_quiche_config_log_keys _quiche_config_log_keys;

  void quiche_config_enable_early_data(
    ffi.Pointer<Config> config,
  ) {
    _quiche_config_enable_early_data ??= _dylib.lookupFunction<
            _c_quiche_config_enable_early_data,
            _dart_quiche_config_enable_early_data>(
        'quiche_config_enable_early_data');
    return _quiche_config_enable_early_data(
      config,
    );
  }

  _dart_quiche_config_enable_early_data _quiche_config_enable_early_data;

  int quiche_config_set_application_protos(
    ffi.Pointer<Config> config,
    ffi.Pointer<ffi.Uint8> protos,
    int protos_len,
  ) {
    _quiche_config_set_application_protos ??= _dylib.lookupFunction<
            _c_quiche_config_set_application_protos,
            _dart_quiche_config_set_application_protos>(
        'quiche_config_set_application_protos');
    return _quiche_config_set_application_protos(
      config,
      protos,
      protos_len,
    );
  }

  _dart_quiche_config_set_application_protos
      _quiche_config_set_application_protos;

  void quiche_config_set_max_idle_timeout(
    ffi.Pointer<Config> config,
    int v,
  ) {
    _quiche_config_set_max_idle_timeout ??= _dylib.lookupFunction<
            _c_quiche_config_set_max_idle_timeout,
            _dart_quiche_config_set_max_idle_timeout>(
        'quiche_config_set_max_idle_timeout');
    return _quiche_config_set_max_idle_timeout(
      config,
      v,
    );
  }

  _dart_quiche_config_set_max_idle_timeout _quiche_config_set_max_idle_timeout;

  void quiche_config_set_max_udp_payload_size(
    ffi.Pointer<Config> config,
    int v,
  ) {
    _quiche_config_set_max_udp_payload_size ??= _dylib.lookupFunction<
            _c_quiche_config_set_max_udp_payload_size,
            _dart_quiche_config_set_max_udp_payload_size>(
        'quiche_config_set_max_udp_payload_size');
    return _quiche_config_set_max_udp_payload_size(
      config,
      v,
    );
  }

  _dart_quiche_config_set_max_udp_payload_size
      _quiche_config_set_max_udp_payload_size;

  void quiche_config_set_initial_max_data(
    ffi.Pointer<Config> config,
    int v,
  ) {
    _quiche_config_set_initial_max_data ??= _dylib.lookupFunction<
            _c_quiche_config_set_initial_max_data,
            _dart_quiche_config_set_initial_max_data>(
        'quiche_config_set_initial_max_data');
    return _quiche_config_set_initial_max_data(
      config,
      v,
    );
  }

  _dart_quiche_config_set_initial_max_data _quiche_config_set_initial_max_data;

  void quiche_config_set_initial_max_stream_data_bidi_local(
    ffi.Pointer<Config> config,
    int v,
  ) {
    _quiche_config_set_initial_max_stream_data_bidi_local ??=
        _dylib.lookupFunction<
                _c_quiche_config_set_initial_max_stream_data_bidi_local,
                _dart_quiche_config_set_initial_max_stream_data_bidi_local>(
            'quiche_config_set_initial_max_stream_data_bidi_local');
    return _quiche_config_set_initial_max_stream_data_bidi_local(
      config,
      v,
    );
  }

  _dart_quiche_config_set_initial_max_stream_data_bidi_local
      _quiche_config_set_initial_max_stream_data_bidi_local;

  void quiche_config_set_initial_max_stream_data_bidi_remote(
    ffi.Pointer<Config> config,
    int v,
  ) {
    _quiche_config_set_initial_max_stream_data_bidi_remote ??=
        _dylib.lookupFunction<
                _c_quiche_config_set_initial_max_stream_data_bidi_remote,
                _dart_quiche_config_set_initial_max_stream_data_bidi_remote>(
            'quiche_config_set_initial_max_stream_data_bidi_remote');
    return _quiche_config_set_initial_max_stream_data_bidi_remote(
      config,
      v,
    );
  }

  _dart_quiche_config_set_initial_max_stream_data_bidi_remote
      _quiche_config_set_initial_max_stream_data_bidi_remote;

  void quiche_config_set_initial_max_stream_data_uni(
    ffi.Pointer<Config> config,
    int v,
  ) {
    _quiche_config_set_initial_max_stream_data_uni ??= _dylib.lookupFunction<
            _c_quiche_config_set_initial_max_stream_data_uni,
            _dart_quiche_config_set_initial_max_stream_data_uni>(
        'quiche_config_set_initial_max_stream_data_uni');
    return _quiche_config_set_initial_max_stream_data_uni(
      config,
      v,
    );
  }

  _dart_quiche_config_set_initial_max_stream_data_uni
      _quiche_config_set_initial_max_stream_data_uni;

  void quiche_config_set_initial_max_streams_bidi(
    ffi.Pointer<Config> config,
    int v,
  ) {
    _quiche_config_set_initial_max_streams_bidi ??= _dylib.lookupFunction<
            _c_quiche_config_set_initial_max_streams_bidi,
            _dart_quiche_config_set_initial_max_streams_bidi>(
        'quiche_config_set_initial_max_streams_bidi');
    return _quiche_config_set_initial_max_streams_bidi(
      config,
      v,
    );
  }

  _dart_quiche_config_set_initial_max_streams_bidi
      _quiche_config_set_initial_max_streams_bidi;

  void quiche_config_set_initial_max_streams_uni(
    ffi.Pointer<Config> config,
    int v,
  ) {
    _quiche_config_set_initial_max_streams_uni ??= _dylib.lookupFunction<
            _c_quiche_config_set_initial_max_streams_uni,
            _dart_quiche_config_set_initial_max_streams_uni>(
        'quiche_config_set_initial_max_streams_uni');
    return _quiche_config_set_initial_max_streams_uni(
      config,
      v,
    );
  }

  _dart_quiche_config_set_initial_max_streams_uni
      _quiche_config_set_initial_max_streams_uni;

  void quiche_config_set_ack_delay_exponent(
    ffi.Pointer<Config> config,
    int v,
  ) {
    _quiche_config_set_ack_delay_exponent ??= _dylib.lookupFunction<
            _c_quiche_config_set_ack_delay_exponent,
            _dart_quiche_config_set_ack_delay_exponent>(
        'quiche_config_set_ack_delay_exponent');
    return _quiche_config_set_ack_delay_exponent(
      config,
      v,
    );
  }

  _dart_quiche_config_set_ack_delay_exponent
      _quiche_config_set_ack_delay_exponent;
